--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -1664,8 +1664,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_phm6nnjrcoj8gbci4cmv(i, j, css_id) {
-          var table = document.getElementById("tinytable_phm6nnjrcoj8gbci4cmv");
+      function styleCell_a5ks2jftjluw20q2oeyn(i, j, css_id) {
+          var table = document.getElementById("tinytable_a5ks2jftjluw20q2oeyn");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1674,8 +1674,8 @@ Figure&nbsp;6: ROC Curve
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_phm6nnjrcoj8gbci4cmv(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_phm6nnjrcoj8gbci4cmv");
+      function spanCell_a5ks2jftjluw20q2oeyn(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_a5ks2jftjluw20q2oeyn");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1706,26 +1706,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_6n2we2nmhrxkp7p0rv31',}, 
-          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_9xa8jwbspxbcjw3s2uub',}, 
-          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_jsclmc7omyo6kp2uanmm',}, 
-          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_cqmqstphvrdym4nj8s0h',}, 
-          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_xxdcmm3s99s5564g4ekf',}, 
-          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_too5ojdez9m96h5vp969',}, 
-          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_3rkxf4leifeylsahe5mr',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_zp6nuyk0f863on9zvzhy',}, 
-          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_jfios200c7atz9rflb8a',}, 
-          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_f2ijpq92ng9nwnlhjn39',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_8d91650q9y8gj1jrnk7o',}, 
-          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_ogy6720cimezoaa2zt22',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_3hd1lev4rprtvdrxj1fp',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_ocphzzybpniufjny4ct4',}, 
+          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_qkrotm0nil8zd5ll4uu7',}, 
+          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_9c27ab22isz08dkkze8h',}, 
+          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_n0isvua4ba6wo3lpp9u3',}, 
+          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_2f8cm7ho3gztsgu4nxnp',}, 
+          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_4zjjyts02jxnocnx6g68',}, 
+          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_wm5p02sykjw17s4kuhi9',}, 
+          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_87pb4jf8xq39p6xeywdn',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_wijvnn0xpb21kmjrj6xg',}, 
+          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_t3iupw2xd29dtvb9cm9j',}, 
+          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_s3wqif1b1p0t4cfg42e1',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_27jud50vth4ht6k50j1j',}, 
+          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_xa24cb31dnrfwfeal6qy',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_rti00wrgbzhifee4j5sl',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_s5qhobuuy683ykd2e2p1',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_phm6nnjrcoj8gbci4cmv(cell.i, cell.j, group.css_id);
+                  styleCell_a5ks2jftjluw20q2oeyn(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1733,23 +1733,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_6n2we2nmhrxkp7p0rv31, .table th.tinytable_css_6n2we2nmhrxkp7p0rv31 { text-align: center; text-align: center; }
-      .table td.tinytable_css_9xa8jwbspxbcjw3s2uub, .table th.tinytable_css_9xa8jwbspxbcjw3s2uub { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_jsclmc7omyo6kp2uanmm, .table th.tinytable_css_jsclmc7omyo6kp2uanmm { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_cqmqstphvrdym4nj8s0h, .table th.tinytable_css_cqmqstphvrdym4nj8s0h { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_xxdcmm3s99s5564g4ekf, .table th.tinytable_css_xxdcmm3s99s5564g4ekf { text-align: center; }
-      .table td.tinytable_css_too5ojdez9m96h5vp969, .table th.tinytable_css_too5ojdez9m96h5vp969 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_3rkxf4leifeylsahe5mr, .table th.tinytable_css_3rkxf4leifeylsahe5mr { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_zp6nuyk0f863on9zvzhy, .table th.tinytable_css_zp6nuyk0f863on9zvzhy { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_jfios200c7atz9rflb8a, .table th.tinytable_css_jfios200c7atz9rflb8a { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_f2ijpq92ng9nwnlhjn39, .table th.tinytable_css_f2ijpq92ng9nwnlhjn39 { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_8d91650q9y8gj1jrnk7o, .table th.tinytable_css_8d91650q9y8gj1jrnk7o { text-align: left; }
-      .table td.tinytable_css_ogy6720cimezoaa2zt22, .table th.tinytable_css_ogy6720cimezoaa2zt22 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_3hd1lev4rprtvdrxj1fp, .table th.tinytable_css_3hd1lev4rprtvdrxj1fp { text-align: left; text-align: center; }
-      .table td.tinytable_css_ocphzzybpniufjny4ct4, .table th.tinytable_css_ocphzzybpniufjny4ct4 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_qkrotm0nil8zd5ll4uu7, .table th.tinytable_css_qkrotm0nil8zd5ll4uu7 { text-align: center; text-align: center; }
+      .table td.tinytable_css_9c27ab22isz08dkkze8h, .table th.tinytable_css_9c27ab22isz08dkkze8h { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_n0isvua4ba6wo3lpp9u3, .table th.tinytable_css_n0isvua4ba6wo3lpp9u3 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_2f8cm7ho3gztsgu4nxnp, .table th.tinytable_css_2f8cm7ho3gztsgu4nxnp { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_4zjjyts02jxnocnx6g68, .table th.tinytable_css_4zjjyts02jxnocnx6g68 { text-align: center; }
+      .table td.tinytable_css_wm5p02sykjw17s4kuhi9, .table th.tinytable_css_wm5p02sykjw17s4kuhi9 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_87pb4jf8xq39p6xeywdn, .table th.tinytable_css_87pb4jf8xq39p6xeywdn { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_wijvnn0xpb21kmjrj6xg, .table th.tinytable_css_wijvnn0xpb21kmjrj6xg { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_t3iupw2xd29dtvb9cm9j, .table th.tinytable_css_t3iupw2xd29dtvb9cm9j { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_s3wqif1b1p0t4cfg42e1, .table th.tinytable_css_s3wqif1b1p0t4cfg42e1 { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_27jud50vth4ht6k50j1j, .table th.tinytable_css_27jud50vth4ht6k50j1j { text-align: left; }
+      .table td.tinytable_css_xa24cb31dnrfwfeal6qy, .table th.tinytable_css_xa24cb31dnrfwfeal6qy { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_rti00wrgbzhifee4j5sl, .table th.tinytable_css_rti00wrgbzhifee4j5sl { text-align: left; text-align: center; }
+      .table td.tinytable_css_s5qhobuuy683ykd2e2p1, .table th.tinytable_css_s5qhobuuy683ykd2e2p1 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_phm6nnjrcoj8gbci4cmv" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_a5ks2jftjluw20q2oeyn" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-2" data-col="0"> </th>
@@ -2026,11 +2026,13 @@ Number of Fisher Scoring iterations: 11</code></pre>
 F =  16.30128  on  2  and  9274  df: p= 8.5676e-08 </code></pre>
 </div>
 </div>
-<p>With 1.9025e-08 we can reject the null hypothesis, and conclude that jointly, the slope coefficients are different from zero, and as such that per capita GDP explains democratic survival.</p>
+<p>With <span class="math inline">\(1.9025e-08\)</span> we can reject the null hypothesis, and conclude that jointly, the slope coefficients are different from zero, and as such that per capita GDP explains democratic survival.</p>
 </section>
 <section id="literature-recommendations" class="level2 unnumbered">
 <h2 class="unnumbered anchored" data-anchor-id="literature-recommendations">Literature Recommendations</h2>
 <ul>
+<li><a href="https://doi.org/10.2307/2991857"><strong><span class="citation" data-cites="beck:1998">Beck et al. (1998)</span></strong></a> “Time-Series-Cross-Section Analysis with a Binary Dependent Variable” – the title says it all</li>
+<li><a href="https://citeseerx.ist.psu.edu/document?repid=rep1&amp;type=pdf&amp;doi=acdce03f6a768a63b4afd3b013d0050439a5355f"><strong><span class="citation" data-cites="beck:2002">Beck et al. (2002)</span></strong></a> This is more specifically for state failure</li>
 <li><a href="https://www.cambridge.org/core/journals/political-analysis/article/abs/understanding-interaction-models-improving-empirical-analyses/9BA57B3720A303C61EBEC6DDFA40744B"><strong><span class="citation" data-cites="brambor:2006">Brambor et al. (2006)</span></strong></a>: This is for the Joint Estimation of Emergence and Survival</li>
 </ul>
 </section>
@@ -2535,6 +2537,12 @@ The data are available as a <a href="files/excelfiles/PO33Q_Week 7_Consolidate.c
 
 
 <div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" data-line-spacing="2" role="list" style="display: none">
+<div id="ref-beck:2002" class="csl-entry" role="listitem">
+Beck, N., Epstein, D., Jackman, S., &amp; O’Halloran, S. (2002). <em><span class="nocase">Alternative Models of Dynamics in binary Time-Series-Cross Section Models: The Example of State Failure</span></em>. <a href="https://citeseerx.ist.psu.edu/document?repid=rep1&amp;type=pdf&amp;doi=acdce03f6a768a63b4afd3b013d0050439a5355f">https://citeseerx.ist.psu.edu/document?repid=rep1&amp;type=pdf&amp;doi=acdce03f6a768a63b4afd3b013d0050439a5355f</a>
+</div>
+<div id="ref-beck:1998" class="csl-entry" role="listitem">
+Beck, N., Katz, J. N., &amp; Tucker, R. (1998). <span class="nocase">Taking Time Seriously: Time‑Series-Cross‑Section Analysis with a Binary Dependent Variable</span>. <em><span>American Journal of Political Science</span></em>, <em>42</em>(4), 1260‑1288. <a href="https://doi.org/10.2307/2991857">https://doi.org/10.2307/2991857</a>
+</div>
 <div id="ref-boix:2003" class="csl-entry" role="listitem">
 Boix, C., &amp; Stokes, S. (2003). <span>Endogenous Democratization</span>. <em><span>World Politics</span></em>, <em>55</em>, 517–549. https://doi.org/<a href="https://doi.org/10.1353/wp.2003.0019">https://doi.org/10.1353/wp.2003.0019</a>
 </div>
