--- a/14-bib.html
+++ b/14-bib.html
@@ -261,6 +261,17 @@ Arel-Bundock, V. (2022). <span class="nocase">modelsummary: Data and
 Model Summaries in R</span>. <em>Journal of Statistical Software</em>,
 <em>103</em>(1), 1–23. <a href="https://doi.org/10.18637/jss.v103.i01">https://doi.org/10.18637/jss.v103.i01</a>
 </div>
+<div id="ref-beck:2002" class="csl-entry" role="listitem">
+Beck, N., Epstein, D., Jackman, S., &amp; O’Halloran, S. (2002).
+<em><span class="nocase">Alternative Models of Dynamics in binary
+Time-Series-Cross Section Models: The Example of State
+Failure</span></em>. <a href="https://citeseerx.ist.psu.edu/document?repid=rep1&amp;type=pdf&amp;doi=acdce03f6a768a63b4afd3b013d0050439a5355f">https://citeseerx.ist.psu.edu/document?repid=rep1&amp;type=pdf&amp;doi=acdce03f6a768a63b4afd3b013d0050439a5355f</a>
+</div>
+<div id="ref-beck:1998" class="csl-entry" role="listitem">
+Beck, N., Katz, J. N., &amp; Tucker, R. (1998). <span class="nocase">Taking Time Seriously: Time‑Series-Cross‑Section Analysis
+with a Binary Dependent Variable</span>. <em><span>American Journal of
+Political Science</span></em>, <em>42</em>(4), 1260‑1288. <a href="https://doi.org/10.2307/2991857">https://doi.org/10.2307/2991857</a>
+</div>
 <div id="ref-boix:2003" class="csl-entry" role="listitem">
 Boix, C., &amp; Stokes, S. (2003). <span>Endogenous
 Democratization</span>. <em><span>World Politics</span></em>,
