--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -1664,8 +1664,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_a5ks2jftjluw20q2oeyn(i, j, css_id) {
-          var table = document.getElementById("tinytable_a5ks2jftjluw20q2oeyn");
+      function styleCell_n3ilusao15rj7rbzk83e(i, j, css_id) {
+          var table = document.getElementById("tinytable_n3ilusao15rj7rbzk83e");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1674,8 +1674,8 @@ Figure&nbsp;6: ROC Curve
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_a5ks2jftjluw20q2oeyn(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_a5ks2jftjluw20q2oeyn");
+      function spanCell_n3ilusao15rj7rbzk83e(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_n3ilusao15rj7rbzk83e");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1706,26 +1706,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_qkrotm0nil8zd5ll4uu7',}, 
-          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_9c27ab22isz08dkkze8h',}, 
-          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_n0isvua4ba6wo3lpp9u3',}, 
-          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_2f8cm7ho3gztsgu4nxnp',}, 
-          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_4zjjyts02jxnocnx6g68',}, 
-          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_wm5p02sykjw17s4kuhi9',}, 
-          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_87pb4jf8xq39p6xeywdn',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_wijvnn0xpb21kmjrj6xg',}, 
-          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_t3iupw2xd29dtvb9cm9j',}, 
-          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_s3wqif1b1p0t4cfg42e1',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_27jud50vth4ht6k50j1j',}, 
-          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_xa24cb31dnrfwfeal6qy',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_rti00wrgbzhifee4j5sl',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_s5qhobuuy683ykd2e2p1',}, 
+          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_huc5uaethflrc935d528',}, 
+          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_pdkyt609ls6ztvrg0ub0',}, 
+          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_5nf1fkez3o8y9xq7hpjw',}, 
+          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_2jsacsc5ssjjgf5szgwl',}, 
+          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_zge93vdq1zbaazu80yuq',}, 
+          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_lcfezbqeuasguyfkf3h6',}, 
+          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_urszxwrj260395yuaerg',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_9oq8jzh87nd1vsxws4sz',}, 
+          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_98shaumjv281brjlmesf',}, 
+          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_b7bv5sddr2k8nqsjq4cq',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_olrr0em0nhcy3lkmnca8',}, 
+          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_ndt73en7xb8iyzd094wb',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_kbrdycq82fcx765zwafb',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_6zklkaa52ay98qmirw4y',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_a5ks2jftjluw20q2oeyn(cell.i, cell.j, group.css_id);
+                  styleCell_n3ilusao15rj7rbzk83e(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1733,23 +1733,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_qkrotm0nil8zd5ll4uu7, .table th.tinytable_css_qkrotm0nil8zd5ll4uu7 { text-align: center; text-align: center; }
-      .table td.tinytable_css_9c27ab22isz08dkkze8h, .table th.tinytable_css_9c27ab22isz08dkkze8h { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_n0isvua4ba6wo3lpp9u3, .table th.tinytable_css_n0isvua4ba6wo3lpp9u3 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_2f8cm7ho3gztsgu4nxnp, .table th.tinytable_css_2f8cm7ho3gztsgu4nxnp { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_4zjjyts02jxnocnx6g68, .table th.tinytable_css_4zjjyts02jxnocnx6g68 { text-align: center; }
-      .table td.tinytable_css_wm5p02sykjw17s4kuhi9, .table th.tinytable_css_wm5p02sykjw17s4kuhi9 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_87pb4jf8xq39p6xeywdn, .table th.tinytable_css_87pb4jf8xq39p6xeywdn { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_wijvnn0xpb21kmjrj6xg, .table th.tinytable_css_wijvnn0xpb21kmjrj6xg { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_t3iupw2xd29dtvb9cm9j, .table th.tinytable_css_t3iupw2xd29dtvb9cm9j { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_s3wqif1b1p0t4cfg42e1, .table th.tinytable_css_s3wqif1b1p0t4cfg42e1 { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_27jud50vth4ht6k50j1j, .table th.tinytable_css_27jud50vth4ht6k50j1j { text-align: left; }
-      .table td.tinytable_css_xa24cb31dnrfwfeal6qy, .table th.tinytable_css_xa24cb31dnrfwfeal6qy { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_rti00wrgbzhifee4j5sl, .table th.tinytable_css_rti00wrgbzhifee4j5sl { text-align: left; text-align: center; }
-      .table td.tinytable_css_s5qhobuuy683ykd2e2p1, .table th.tinytable_css_s5qhobuuy683ykd2e2p1 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_huc5uaethflrc935d528, .table th.tinytable_css_huc5uaethflrc935d528 { text-align: center; text-align: center; }
+      .table td.tinytable_css_pdkyt609ls6ztvrg0ub0, .table th.tinytable_css_pdkyt609ls6ztvrg0ub0 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_5nf1fkez3o8y9xq7hpjw, .table th.tinytable_css_5nf1fkez3o8y9xq7hpjw { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_2jsacsc5ssjjgf5szgwl, .table th.tinytable_css_2jsacsc5ssjjgf5szgwl { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_zge93vdq1zbaazu80yuq, .table th.tinytable_css_zge93vdq1zbaazu80yuq { text-align: center; }
+      .table td.tinytable_css_lcfezbqeuasguyfkf3h6, .table th.tinytable_css_lcfezbqeuasguyfkf3h6 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_urszxwrj260395yuaerg, .table th.tinytable_css_urszxwrj260395yuaerg { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_9oq8jzh87nd1vsxws4sz, .table th.tinytable_css_9oq8jzh87nd1vsxws4sz { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_98shaumjv281brjlmesf, .table th.tinytable_css_98shaumjv281brjlmesf { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_b7bv5sddr2k8nqsjq4cq, .table th.tinytable_css_b7bv5sddr2k8nqsjq4cq { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_olrr0em0nhcy3lkmnca8, .table th.tinytable_css_olrr0em0nhcy3lkmnca8 { text-align: left; }
+      .table td.tinytable_css_ndt73en7xb8iyzd094wb, .table th.tinytable_css_ndt73en7xb8iyzd094wb { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_kbrdycq82fcx765zwafb, .table th.tinytable_css_kbrdycq82fcx765zwafb { text-align: left; text-align: center; }
+      .table td.tinytable_css_6zklkaa52ay98qmirw4y, .table th.tinytable_css_6zklkaa52ay98qmirw4y { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_a5ks2jftjluw20q2oeyn" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_n3ilusao15rj7rbzk83e" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-2" data-col="0"> </th>
@@ -2427,6 +2427,7 @@ Table&nbsp;4: Regression Results for Lagged, Emergence, Survival, and Interactio
 </div>
 </details>
 </div>
+<p>You can compare your results with <a href="https://drfloreiche.github.io/PO33Q/files/Week%207/Results%20Table/PO33Q_Week7_Results-Table.pdf">my results table</a>.</p>
 </section>
 </section>
 <section id="homework-for-week-8" class="level1 unnumbered">
