--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -1664,8 +1664,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_n3ilusao15rj7rbzk83e(i, j, css_id) {
-          var table = document.getElementById("tinytable_n3ilusao15rj7rbzk83e");
+      function styleCell_tffqrhjqt0st4s0vbha9(i, j, css_id) {
+          var table = document.getElementById("tinytable_tffqrhjqt0st4s0vbha9");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1674,8 +1674,8 @@ Figure&nbsp;6: ROC Curve
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_n3ilusao15rj7rbzk83e(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_n3ilusao15rj7rbzk83e");
+      function spanCell_tffqrhjqt0st4s0vbha9(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_tffqrhjqt0st4s0vbha9");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1706,26 +1706,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_huc5uaethflrc935d528',}, 
-          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_pdkyt609ls6ztvrg0ub0',}, 
-          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_5nf1fkez3o8y9xq7hpjw',}, 
-          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_2jsacsc5ssjjgf5szgwl',}, 
-          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_zge93vdq1zbaazu80yuq',}, 
-          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_lcfezbqeuasguyfkf3h6',}, 
-          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_urszxwrj260395yuaerg',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_9oq8jzh87nd1vsxws4sz',}, 
-          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_98shaumjv281brjlmesf',}, 
-          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_b7bv5sddr2k8nqsjq4cq',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_olrr0em0nhcy3lkmnca8',}, 
-          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_ndt73en7xb8iyzd094wb',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_kbrdycq82fcx765zwafb',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_6zklkaa52ay98qmirw4y',}, 
+          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_op4x4b3tbqe236ouk6x8',}, 
+          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_0wq1mrqcq1a0x1l08fh5',}, 
+          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_be0d0gjd55l09t7q6g3q',}, 
+          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_rkkv4x83p5ncu8fm2ook',}, 
+          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_x5fh1aneygpb3iw1onjh',}, 
+          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_49bd1alhl8jswjucsn5j',}, 
+          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_64b7ly1jn3oxrqrebzdt',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_rblt2aiii402kfak7zlm',}, 
+          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_phz6hvo24b7e2gbrdm8f',}, 
+          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_g1j84k3pd3tlsznbf0zt',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_k4mgy8kd5uncq8vbkagz',}, 
+          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_kwj5tf9xl40bju32bxxh',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_43v8y2jre2bkxexlz6kw',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_1ixp2tx614w17oshll1q',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_n3ilusao15rj7rbzk83e(cell.i, cell.j, group.css_id);
+                  styleCell_tffqrhjqt0st4s0vbha9(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1733,23 +1733,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_huc5uaethflrc935d528, .table th.tinytable_css_huc5uaethflrc935d528 { text-align: center; text-align: center; }
-      .table td.tinytable_css_pdkyt609ls6ztvrg0ub0, .table th.tinytable_css_pdkyt609ls6ztvrg0ub0 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_5nf1fkez3o8y9xq7hpjw, .table th.tinytable_css_5nf1fkez3o8y9xq7hpjw { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_2jsacsc5ssjjgf5szgwl, .table th.tinytable_css_2jsacsc5ssjjgf5szgwl { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_zge93vdq1zbaazu80yuq, .table th.tinytable_css_zge93vdq1zbaazu80yuq { text-align: center; }
-      .table td.tinytable_css_lcfezbqeuasguyfkf3h6, .table th.tinytable_css_lcfezbqeuasguyfkf3h6 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_urszxwrj260395yuaerg, .table th.tinytable_css_urszxwrj260395yuaerg { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_9oq8jzh87nd1vsxws4sz, .table th.tinytable_css_9oq8jzh87nd1vsxws4sz { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_98shaumjv281brjlmesf, .table th.tinytable_css_98shaumjv281brjlmesf { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_b7bv5sddr2k8nqsjq4cq, .table th.tinytable_css_b7bv5sddr2k8nqsjq4cq { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_olrr0em0nhcy3lkmnca8, .table th.tinytable_css_olrr0em0nhcy3lkmnca8 { text-align: left; }
-      .table td.tinytable_css_ndt73en7xb8iyzd094wb, .table th.tinytable_css_ndt73en7xb8iyzd094wb { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_kbrdycq82fcx765zwafb, .table th.tinytable_css_kbrdycq82fcx765zwafb { text-align: left; text-align: center; }
-      .table td.tinytable_css_6zklkaa52ay98qmirw4y, .table th.tinytable_css_6zklkaa52ay98qmirw4y { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_op4x4b3tbqe236ouk6x8, .table th.tinytable_css_op4x4b3tbqe236ouk6x8 { text-align: center; text-align: center; }
+      .table td.tinytable_css_0wq1mrqcq1a0x1l08fh5, .table th.tinytable_css_0wq1mrqcq1a0x1l08fh5 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_be0d0gjd55l09t7q6g3q, .table th.tinytable_css_be0d0gjd55l09t7q6g3q { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_rkkv4x83p5ncu8fm2ook, .table th.tinytable_css_rkkv4x83p5ncu8fm2ook { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_x5fh1aneygpb3iw1onjh, .table th.tinytable_css_x5fh1aneygpb3iw1onjh { text-align: center; }
+      .table td.tinytable_css_49bd1alhl8jswjucsn5j, .table th.tinytable_css_49bd1alhl8jswjucsn5j { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_64b7ly1jn3oxrqrebzdt, .table th.tinytable_css_64b7ly1jn3oxrqrebzdt { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_rblt2aiii402kfak7zlm, .table th.tinytable_css_rblt2aiii402kfak7zlm { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_phz6hvo24b7e2gbrdm8f, .table th.tinytable_css_phz6hvo24b7e2gbrdm8f { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_g1j84k3pd3tlsznbf0zt, .table th.tinytable_css_g1j84k3pd3tlsznbf0zt { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_k4mgy8kd5uncq8vbkagz, .table th.tinytable_css_k4mgy8kd5uncq8vbkagz { text-align: left; }
+      .table td.tinytable_css_kwj5tf9xl40bju32bxxh, .table th.tinytable_css_kwj5tf9xl40bju32bxxh { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_43v8y2jre2bkxexlz6kw, .table th.tinytable_css_43v8y2jre2bkxexlz6kw { text-align: left; text-align: center; }
+      .table td.tinytable_css_1ixp2tx614w17oshll1q, .table th.tinytable_css_1ixp2tx614w17oshll1q { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_n3ilusao15rj7rbzk83e" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_tffqrhjqt0st4s0vbha9" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-2" data-col="0"> </th>
@@ -2071,7 +2071,7 @@ F =  16.30128  on  2  and  9274  df: p= 8.5676e-08 </code></pre>
 <li>Now interact all the lagged independent variables with the lagged dependent variable. Estimate a fully interactive model and include all the constitutive terms. Put the results in column 5 of <a href="#tbl-interactionmodels" class="quarto-xref">Table&nbsp;<span>4</span></a>. What is the relationship between these coefficients and those in the previous two columns? Is there any extra information provided by this full interaction model that was not available from the previous two models?</li>
 <li>Now consider the straight probit model, the probit model with the lagged dependent variable, and the full interaction model. Produce the ROC curve for each of these models. Interpret a point on one of these curves. What do the ROC curves tell you about the fit of these three models?</li>
 </ol>
-<p>You can find the solutions to these exercises in the respective RScript in the <a href="https://drfloreiche.github.io/PO33Q/12-Downloads.html">Downloads Section</a>.</p>
+<p>You can find the populated results table and the corresponding RScript in the <a href="https://drfloreiche.github.io/PO33Q/12-Downloads.html">Downloads Section</a>.</p>
 <p>&nbsp;</p>
 <div id="tbl-interactionmodels" class="quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-tbl figure">
@@ -2427,7 +2427,6 @@ Table&nbsp;4: Regression Results for Lagged, Emergence, Survival, and Interactio
 </div>
 </details>
 </div>
-<p>You can compare your results with <a href="https://drfloreiche.github.io/PO33Q/files/Week%207/Results%20Table/PO33Q_Week7_Results-Table.pdf">my results table</a>.</p>
 </section>
 </section>
 <section id="homework-for-week-8" class="level1 unnumbered">
