--- a/11-Quarto.html
+++ b/11-Quarto.html
@@ -290,7 +290,7 @@ window.MathJax = {
 <li>Text</li>
 <li>Code Chunks</li>
 </ul>
-<p>I will go through these in turn now. To follow along, I recommend you download the <a href="files/Quarto/PO33Q Assessment Template.qmd">Assessment Template</a> in which all of the below is already implemented. Once you open it, delete the first line (empty space), so that the three dashes are on line one. Otherwise, don’t do anything with it, yet. But whilst you are reading what I am discussing here, try to match it to what you see in the qmd file. If you want to jump ahead and render it into a pdf, please follow the instructions in the <a href="https://drfloreiche.github.io/PO33Q/11-Quarto.html#assessment-template">template section</a>.</p>
+<p>I will go through these in turn now. To follow along, I recommend you download the <a href="files/Quarto/PO33Q Assessment Template.qmd">Assessment Template</a> in which all of the below is already implemented. Once you open it, delete the hashtag in the first line, so that line 1 only contains three dashes <code>---</code>. Otherwise, don’t do anything with it, yet. But whilst you are reading what I am discussing here, try to match it to what you see in the qmd file. If you want to jump ahead and render it into a pdf, please follow the instructions in the <a href="https://drfloreiche.github.io/PO33Q/11-Quarto.html#assessment-template">template section</a>.</p>
 <p>Once you open the essay template in R Studio, you will obtain a few more options in the task bar at the top which will allow you to turn this raw file into a pdf. More on this below, under “Rendering”.</p>
 <div style="height:1em;">
 
@@ -491,7 +491,7 @@ preferably APA styled, but I’m not too precious as long as it’s consistent
 </section>
 <section id="assessment-template" class="level1 unnumbered">
 <h1 class="unnumbered">Assessment Template</h1>
-<p>In order to make your life as easy as possible, I have put together an Assessment Template in the form of an qmd file that you can knit in R. You can download this <a href="files/Quarto/PO33Q Assessment Template.qmd">here</a>. In order to knit this document, you need to remove the first empty line from the qmd file (so that the three dashes are in line 1), and place the following files in the same folder as the qmd file:</p>
+<p>In order to make your life as easy as possible, I have put together an Assessment Template in the form of an qmd file that you can knit in R. You can download this <a href="files/Quarto/PO33Q Assessment Template.qmd">here</a>. In order to knit this document, you need to remove the hashtag in the first line, so that line 1 only contains three dashes <code>---</code>, and place the following files in the same folder as the qmd file:</p>
 <ul>
 <li><a href="files/Quarto/Crest.png">Warwick Crest</a> for the title page.</li>
 <li><a href="files/Quarto/Warwick.png">Warwick Text</a> for the title page.</li>
