--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -186,9 +186,20 @@ window.Quarto = {
     <span class="navbar-title"><span class="title-long">PO33Q – Determinants of Democracy</span> <span class="title-short">PO33Q</span></span>
     </a>
   </div>
-        <div class="quarto-navbar-tools tools-end">
+            <div id="quarto-search" class="" title="Search"></div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" role="menu" aria-expanded="false" aria-label="Toggle navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
+  <span class="navbar-toggler-icon"></span>
+</button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav navbar-nav-scroll ms-auto">
+  <li class="nav-item">
+    <a class="nav-link" href="https://drfloreiche.github.io/"> 
+<span class="menu-text">Flo’s Home</span></a>
+  </li>  
+</ul>
+          </div> <!-- /navcollapse -->
+            <div class="quarto-navbar-tools">
 </div>
-          <div id="quarto-search" class="" title="Search"></div>
       </div> <!-- /container-fluid -->
     </nav>
   <nav class="quarto-secondary-nav">
@@ -1667,8 +1678,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_lb7mf8w69mkmgqmj1lex(i, j, css_id) {
-          var table = document.getElementById("tinytable_lb7mf8w69mkmgqmj1lex");
+      function styleCell_dpuzroazmqt6kjb0a2ck(i, j, css_id) {
+          var table = document.getElementById("tinytable_dpuzroazmqt6kjb0a2ck");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1677,8 +1688,8 @@ Figure&nbsp;6: ROC Curve
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_lb7mf8w69mkmgqmj1lex(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_lb7mf8w69mkmgqmj1lex");
+      function spanCell_dpuzroazmqt6kjb0a2ck(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_dpuzroazmqt6kjb0a2ck");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1709,26 +1720,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_nh1mnwmuhwjnsljpkhp5',}, 
-          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_rw85mq94wepda42prw6q',}, 
-          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_u05e8a7rlyhtrhw124h6',}, 
-          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_trn2ssqipdp76wwboc8q',}, 
-          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_7pifap7qounygjxj9ms3',}, 
-          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_3gk727qepina0jfv4n1r',}, 
-          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_a5qpu9n6g1cy7pepbqgm',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_vnbopzjfhm089ff36jej',}, 
-          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_zfoq8totgmfdd7muumxe',}, 
-          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_pf3bc015jvgpqdead0pk',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_nsvvrqju2wxabvvqwzvs',}, 
-          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_8dnj1lcyhi5gnt3257ae',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_b5sbieqk0nyq0jon573e',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_c821wz6avej44gdy04rr',}, 
+          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_ycc4x0v42f8b95sm94nc',}, 
+          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_6br2l5gg8pj6si0vz4qo',}, 
+          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_vclvmujql7d9rvevm370',}, 
+          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_5lihf6ns5g5jydbscsrt',}, 
+          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_fgg1o9jj12458hkjxuam',}, 
+          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_xyurl5onqh3mg56gtliq',}, 
+          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_cekfuro34sgkvhcz2e02',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_kinm7w4pbsdhe3hjnpzi',}, 
+          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_wjf15zkqjf2s8kljzypg',}, 
+          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_wyx1kpuqbx2v8rvjxrnc',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_v6kqmjvplbun11mf4e3g',}, 
+          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_nb61olm8pes5fn8gilr3',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_r9s89ivik638lnfsrhtk',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_4c0buqc1b93rud4z0roy',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_lb7mf8w69mkmgqmj1lex(cell.i, cell.j, group.css_id);
+                  styleCell_dpuzroazmqt6kjb0a2ck(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1736,23 +1747,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_nh1mnwmuhwjnsljpkhp5, .table th.tinytable_css_nh1mnwmuhwjnsljpkhp5 { text-align: center; text-align: center; }
-      .table td.tinytable_css_rw85mq94wepda42prw6q, .table th.tinytable_css_rw85mq94wepda42prw6q { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_u05e8a7rlyhtrhw124h6, .table th.tinytable_css_u05e8a7rlyhtrhw124h6 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_trn2ssqipdp76wwboc8q, .table th.tinytable_css_trn2ssqipdp76wwboc8q { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_7pifap7qounygjxj9ms3, .table th.tinytable_css_7pifap7qounygjxj9ms3 { text-align: center; }
-      .table td.tinytable_css_3gk727qepina0jfv4n1r, .table th.tinytable_css_3gk727qepina0jfv4n1r { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_a5qpu9n6g1cy7pepbqgm, .table th.tinytable_css_a5qpu9n6g1cy7pepbqgm { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_vnbopzjfhm089ff36jej, .table th.tinytable_css_vnbopzjfhm089ff36jej { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_zfoq8totgmfdd7muumxe, .table th.tinytable_css_zfoq8totgmfdd7muumxe { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_pf3bc015jvgpqdead0pk, .table th.tinytable_css_pf3bc015jvgpqdead0pk { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_nsvvrqju2wxabvvqwzvs, .table th.tinytable_css_nsvvrqju2wxabvvqwzvs { text-align: left; }
-      .table td.tinytable_css_8dnj1lcyhi5gnt3257ae, .table th.tinytable_css_8dnj1lcyhi5gnt3257ae { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_b5sbieqk0nyq0jon573e, .table th.tinytable_css_b5sbieqk0nyq0jon573e { text-align: left; text-align: center; }
-      .table td.tinytable_css_c821wz6avej44gdy04rr, .table th.tinytable_css_c821wz6avej44gdy04rr { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_ycc4x0v42f8b95sm94nc, .table th.tinytable_css_ycc4x0v42f8b95sm94nc { text-align: center; text-align: center; }
+      .table td.tinytable_css_6br2l5gg8pj6si0vz4qo, .table th.tinytable_css_6br2l5gg8pj6si0vz4qo { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_vclvmujql7d9rvevm370, .table th.tinytable_css_vclvmujql7d9rvevm370 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_5lihf6ns5g5jydbscsrt, .table th.tinytable_css_5lihf6ns5g5jydbscsrt { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_fgg1o9jj12458hkjxuam, .table th.tinytable_css_fgg1o9jj12458hkjxuam { text-align: center; }
+      .table td.tinytable_css_xyurl5onqh3mg56gtliq, .table th.tinytable_css_xyurl5onqh3mg56gtliq { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_cekfuro34sgkvhcz2e02, .table th.tinytable_css_cekfuro34sgkvhcz2e02 { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_kinm7w4pbsdhe3hjnpzi, .table th.tinytable_css_kinm7w4pbsdhe3hjnpzi { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_wjf15zkqjf2s8kljzypg, .table th.tinytable_css_wjf15zkqjf2s8kljzypg { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_wyx1kpuqbx2v8rvjxrnc, .table th.tinytable_css_wyx1kpuqbx2v8rvjxrnc { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_v6kqmjvplbun11mf4e3g, .table th.tinytable_css_v6kqmjvplbun11mf4e3g { text-align: left; }
+      .table td.tinytable_css_nb61olm8pes5fn8gilr3, .table th.tinytable_css_nb61olm8pes5fn8gilr3 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_r9s89ivik638lnfsrhtk, .table th.tinytable_css_r9s89ivik638lnfsrhtk { text-align: left; text-align: center; }
+      .table td.tinytable_css_4c0buqc1b93rud4z0roy, .table th.tinytable_css_4c0buqc1b93rud4z0roy { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_lb7mf8w69mkmgqmj1lex" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_dpuzroazmqt6kjb0a2ck" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-2" data-col="0"> </th>
@@ -2721,23 +2732,6 @@ Reiche, F. (forthcoming). <em><span class="nocase">Introduction to Quantitative 
 </section>
 
 </main> <!-- /main -->
-<script>
-document.addEventListener("DOMContentLoaded", function() {
-  const toc = document.querySelector("nav#TOC");
-  if (toc) {
-    const link = document.createElement("div");
-    link.innerHTML = `
-      <div style="margin-top:1em; font-family: Lexend, sans-serif; font-size:0.9em;">
-        <a href="https://drfloreiche.github.io/" target="_blank" style="color:#cd6118; text-decoration:none;">
-          Back to Flo's Home
-        </a>
-      </div>
-    `;
-    toc.appendChild(link);
-  }
-});
-</script>
-
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     const buttons = document.querySelectorAll(".delayed-download");
