--- a/03-PO33Q.html
+++ b/03-PO33Q.html
@@ -701,8 +701,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_62k05mv6wt2i8h0txy70(i, j, css_id) {
-          var table = document.getElementById("tinytable_62k05mv6wt2i8h0txy70");
+      function styleCell_kzlssv85xkgicuw177ez(i, j, css_id) {
+          var table = document.getElementById("tinytable_kzlssv85xkgicuw177ez");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -711,8 +711,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_62k05mv6wt2i8h0txy70(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_62k05mv6wt2i8h0txy70");
+      function spanCell_kzlssv85xkgicuw177ez(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_kzlssv85xkgicuw177ez");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -743,20 +743,20 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_qjav8099cotinon43od0',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_k93523ugpho3nklmogcl',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_yf6b3eiju6s6gl84lvx6',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_c75l40fy4wo5l3eg7cj7',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_obeyme55np72t1j5guvf',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_futrw4wo1t542nsik6df',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_f41cgkw4mms2zm1j23yw',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_qzmx33o1mghzhypc50pe',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_mupdf34suyc4w8j1s2c3',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_to1ep6wik6gv9oqnzwme',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_wc4e35cnaq4rzy5bvhk6',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_22sb2d1fhb4s0302jzkz',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_u3z910na342sekiv5pgu',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_7m2685ap3tgnpr9dijii',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_pgnggltls2v78un1edk0',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_jdf7zjcb2sudfyctufm8',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_62k05mv6wt2i8h0txy70(cell.i, cell.j, group.css_id);
+                  styleCell_kzlssv85xkgicuw177ez(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -764,17 +764,17 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_qjav8099cotinon43od0, .table th.tinytable_css_qjav8099cotinon43od0 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_k93523ugpho3nklmogcl, .table th.tinytable_css_k93523ugpho3nklmogcl { text-align: center; }
-      .table td.tinytable_css_yf6b3eiju6s6gl84lvx6, .table th.tinytable_css_yf6b3eiju6s6gl84lvx6 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_c75l40fy4wo5l3eg7cj7, .table th.tinytable_css_c75l40fy4wo5l3eg7cj7 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_obeyme55np72t1j5guvf, .table th.tinytable_css_obeyme55np72t1j5guvf { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_futrw4wo1t542nsik6df, .table th.tinytable_css_futrw4wo1t542nsik6df { text-align: left; }
-      .table td.tinytable_css_f41cgkw4mms2zm1j23yw, .table th.tinytable_css_f41cgkw4mms2zm1j23yw { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_qzmx33o1mghzhypc50pe, .table th.tinytable_css_qzmx33o1mghzhypc50pe { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_mupdf34suyc4w8j1s2c3, .table th.tinytable_css_mupdf34suyc4w8j1s2c3 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_to1ep6wik6gv9oqnzwme, .table th.tinytable_css_to1ep6wik6gv9oqnzwme { text-align: center; }
+      .table td.tinytable_css_wc4e35cnaq4rzy5bvhk6, .table th.tinytable_css_wc4e35cnaq4rzy5bvhk6 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_22sb2d1fhb4s0302jzkz, .table th.tinytable_css_22sb2d1fhb4s0302jzkz { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_u3z910na342sekiv5pgu, .table th.tinytable_css_u3z910na342sekiv5pgu { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_7m2685ap3tgnpr9dijii, .table th.tinytable_css_7m2685ap3tgnpr9dijii { text-align: left; }
+      .table td.tinytable_css_pgnggltls2v78un1edk0, .table th.tinytable_css_pgnggltls2v78un1edk0 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_jdf7zjcb2sudfyctufm8, .table th.tinytable_css_jdf7zjcb2sudfyctufm8 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_62k05mv6wt2i8h0txy70" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_kzlssv85xkgicuw177ez" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
@@ -878,8 +878,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <script>
 
-      function styleCell_jyntt7n8tw294npv4069(i, j, css_id) {
-          var table = document.getElementById("tinytable_jyntt7n8tw294npv4069");
+      function styleCell_vuwjeizczya6fljlprim(i, j, css_id) {
+          var table = document.getElementById("tinytable_vuwjeizczya6fljlprim");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -888,8 +888,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_jyntt7n8tw294npv4069(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_jyntt7n8tw294npv4069");
+      function spanCell_vuwjeizczya6fljlprim(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_vuwjeizczya6fljlprim");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -920,20 +920,20 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_iuho64gj9semtn4gmr05',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_8p2vbkzny2o4y038ghs8',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_g66zns1qce77v2dfveb3',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_tuzuf2a6hyis1n58v8mg',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_kq3uqxekaf2kz1mu0v0j',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_o50g1n22wcy47mu1714p',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_ih7bjy6rex17q9w9xw3m',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_037z93lsq9zj2vzx38kb',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_l4y7pb0pnujnq3522giv',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_w13t32ojfxoqn4e0u7tg',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_wf6eavlsp0lj5ihuvnu3',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_hb8c9gn7s2s9h58jf24a',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_pt9saa7b681dis7s9hum',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_fqzo3ewd7z1de4mxawmv',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_qqocjorbw2919jifrbye',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_10yy9cfzmgtb67pe0vgs',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_jyntt7n8tw294npv4069(cell.i, cell.j, group.css_id);
+                  styleCell_vuwjeizczya6fljlprim(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -941,17 +941,17 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_iuho64gj9semtn4gmr05, .table th.tinytable_css_iuho64gj9semtn4gmr05 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_8p2vbkzny2o4y038ghs8, .table th.tinytable_css_8p2vbkzny2o4y038ghs8 { text-align: center; }
-      .table td.tinytable_css_g66zns1qce77v2dfveb3, .table th.tinytable_css_g66zns1qce77v2dfveb3 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_tuzuf2a6hyis1n58v8mg, .table th.tinytable_css_tuzuf2a6hyis1n58v8mg { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_kq3uqxekaf2kz1mu0v0j, .table th.tinytable_css_kq3uqxekaf2kz1mu0v0j { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_o50g1n22wcy47mu1714p, .table th.tinytable_css_o50g1n22wcy47mu1714p { text-align: left; }
-      .table td.tinytable_css_ih7bjy6rex17q9w9xw3m, .table th.tinytable_css_ih7bjy6rex17q9w9xw3m { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_037z93lsq9zj2vzx38kb, .table th.tinytable_css_037z93lsq9zj2vzx38kb { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_l4y7pb0pnujnq3522giv, .table th.tinytable_css_l4y7pb0pnujnq3522giv { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_w13t32ojfxoqn4e0u7tg, .table th.tinytable_css_w13t32ojfxoqn4e0u7tg { text-align: center; }
+      .table td.tinytable_css_wf6eavlsp0lj5ihuvnu3, .table th.tinytable_css_wf6eavlsp0lj5ihuvnu3 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_hb8c9gn7s2s9h58jf24a, .table th.tinytable_css_hb8c9gn7s2s9h58jf24a { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_pt9saa7b681dis7s9hum, .table th.tinytable_css_pt9saa7b681dis7s9hum { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_fqzo3ewd7z1de4mxawmv, .table th.tinytable_css_fqzo3ewd7z1de4mxawmv { text-align: left; }
+      .table td.tinytable_css_qqocjorbw2919jifrbye, .table th.tinytable_css_qqocjorbw2919jifrbye { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_10yy9cfzmgtb67pe0vgs, .table th.tinytable_css_10yy9cfzmgtb67pe0vgs { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_jyntt7n8tw294npv4069" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_vuwjeizczya6fljlprim" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
@@ -1237,6 +1237,87 @@ Stinerock, R. (2022). <em><span class="nocase">Statistics with R â€“ A Beginnerâ
       }
     });
   });
+</script>
+<script>
+
+
+const sidebar = document.querySelector('#quarto-sidebar, .quarto-sidebar');
+const where = document.querySelector('.quarto-secondary-nav') || document.querySelector('#quarto-header');
+if (!sidebar || !where) return;
+
+
+// Collect top-level chapter links. Fallback to all links if needed.
+let links = Array.from(sidebar.querySelectorAll('.sidebar-menu > .sidebar-item > .sidebar-item-container > a.sidebar-link'));
+if (!links.length) links = Array.from(sidebar.querySelectorAll('.sidebar-link'));
+if (!links.length) return;
+
+
+const bar = document.createElement('div');
+bar.id = 'quarto-tertiary-nav';
+
+
+links.forEach(a => {
+const clone = a.cloneNode(true);
+clone.removeAttribute('data-bs-toggle');
+clone.classList.remove('sidebar-link-toggle');
+bar.appendChild(clone);
+});
+
+
+where.after(bar);
+
+
+// Ensure current page link is visible
+const current = bar.querySelector('a[aria-current="page"], a.active');
+if (current && 'scrollIntoView' in current) {
+current.scrollIntoView({behavior: 'auto', inline: 'center', block: 'nearest'});
+}
+}
+
+
+function setHeights(){
+const primary = document.getElementById('quarto-header');
+const secondary = document.querySelector('.quarto-secondary-nav');
+const rootStyle = document.documentElement.style;
+rootStyle.setProperty('--primary-height', (primary ? primary.offsetHeight : 44) + 'px');
+rootStyle.setProperty('--secondary-height', (secondary ? secondary.offsetHeight : 44) + 'px');
+}
+
+
+// Hide/Show on scroll (Headroom-style, tiny + dependency-free)
+let lastY = window.scrollY;
+let acc = 0;
+const threshold = 24; // px accumulated before toggling, to avoid jitter
+
+
+function onScroll(){
+if (!isMobile()) return;
+const y = window.scrollY;
+const dy = y - lastY;
+acc = (dy > 0) ? Math.min(96, acc + dy) : Math.max(-96, acc + dy);
+if (acc > threshold) {
+document.documentElement.classList.add('nav-hidden');
+} else if (acc < -threshold || y < 2) {
+document.documentElement.classList.remove('nav-hidden');
+}
+lastY = y;
+}
+
+
+function init(){
+if (!isMobile()) return; // desktop unchanged
+buildTertiary();
+setHeights();
+window.addEventListener('resize', setHeights, {passive: true});
+window.addEventListener('scroll', onScroll, {passive: true});
+// Recalc after fonts/images settle
+window.setTimeout(setHeights, 300);
+window.addEventListener('load', setHeights);
+}
+
+
+document.addEventListener('DOMContentLoaded', init);
+})();
 </script>
 <script id="quarto-html-after-body" type="application/javascript">
 window.document.addEventListener("DOMContentLoaded", function (event) {
