--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -1678,8 +1678,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_0650p3v4bm9p4okjio83(i, j, css_id) {
-          var table = document.getElementById("tinytable_0650p3v4bm9p4okjio83");
+      function styleCell_trjj2gyk4922s4xw82ui(i, j, css_id) {
+          var table = document.getElementById("tinytable_trjj2gyk4922s4xw82ui");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1688,8 +1688,8 @@ Figure&nbsp;6: ROC Curve
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_0650p3v4bm9p4okjio83(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_0650p3v4bm9p4okjio83");
+      function spanCell_trjj2gyk4922s4xw82ui(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_trjj2gyk4922s4xw82ui");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1720,26 +1720,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_bctd7i3af7s6snd223u0',}, 
-          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_aqdq054zrdxth0k0rbzk',}, 
-          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_5moxn7oqnocd3nipb4ri',}, 
-          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_l0v41stnubfrl1hpkd8t',}, 
-          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_4bijpugxi7b9uurs6oif',}, 
-          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_n95bgpkps3kr1uz18m8q',}, 
-          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_aqegf9dmsjhnmpc8a8t8',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_t9h3qtuvk0etxz9jwdov',}, 
-          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_gxwaw75gnmm0m9hnwcap',}, 
-          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_7hl03xme95w6v0zin7lt',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_pxue1l40fi2ggx8952wk',}, 
-          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_khgohf1dg7mmh27f647n',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_a8t170bli5elijj3v8g4',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_lcqho1l25flvs5tk0iuy',}, 
+          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_vaddt5tkgh55xufbp056',}, 
+          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_f1erzbvq8lvuc16jzrf0',}, 
+          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_xo1ss3fuiptf9jbf7jza',}, 
+          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_i2jayavqw0vmbmjrajbi',}, 
+          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_q90c2jmz50ep0eexqyep',}, 
+          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_3zr03udyq0cg50qg6nic',}, 
+          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_i7zk318jztgkkg4x6sp0',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_wp6junb1mwnk2ryadw06',}, 
+          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_emob096s6f066iua9od4',}, 
+          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_glsu12smd2zoee1e421x',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_smo8liyptt5op9o6a9ua',}, 
+          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_4lj6jjhomdf3luyhetrr',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_22zgooh9idgub6tabyi0',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_l7z26mk312b8flp921xw',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_0650p3v4bm9p4okjio83(cell.i, cell.j, group.css_id);
+                  styleCell_trjj2gyk4922s4xw82ui(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1747,23 +1747,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_bctd7i3af7s6snd223u0, .table th.tinytable_css_bctd7i3af7s6snd223u0 { text-align: center; text-align: center; }
-      .table td.tinytable_css_aqdq054zrdxth0k0rbzk, .table th.tinytable_css_aqdq054zrdxth0k0rbzk { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_5moxn7oqnocd3nipb4ri, .table th.tinytable_css_5moxn7oqnocd3nipb4ri { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_l0v41stnubfrl1hpkd8t, .table th.tinytable_css_l0v41stnubfrl1hpkd8t { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_4bijpugxi7b9uurs6oif, .table th.tinytable_css_4bijpugxi7b9uurs6oif { text-align: center; }
-      .table td.tinytable_css_n95bgpkps3kr1uz18m8q, .table th.tinytable_css_n95bgpkps3kr1uz18m8q { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_aqegf9dmsjhnmpc8a8t8, .table th.tinytable_css_aqegf9dmsjhnmpc8a8t8 { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_t9h3qtuvk0etxz9jwdov, .table th.tinytable_css_t9h3qtuvk0etxz9jwdov { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_gxwaw75gnmm0m9hnwcap, .table th.tinytable_css_gxwaw75gnmm0m9hnwcap { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_7hl03xme95w6v0zin7lt, .table th.tinytable_css_7hl03xme95w6v0zin7lt { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_pxue1l40fi2ggx8952wk, .table th.tinytable_css_pxue1l40fi2ggx8952wk { text-align: left; }
-      .table td.tinytable_css_khgohf1dg7mmh27f647n, .table th.tinytable_css_khgohf1dg7mmh27f647n { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_a8t170bli5elijj3v8g4, .table th.tinytable_css_a8t170bli5elijj3v8g4 { text-align: left; text-align: center; }
-      .table td.tinytable_css_lcqho1l25flvs5tk0iuy, .table th.tinytable_css_lcqho1l25flvs5tk0iuy { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_vaddt5tkgh55xufbp056, .table th.tinytable_css_vaddt5tkgh55xufbp056 { text-align: center; text-align: center; }
+      .table td.tinytable_css_f1erzbvq8lvuc16jzrf0, .table th.tinytable_css_f1erzbvq8lvuc16jzrf0 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_xo1ss3fuiptf9jbf7jza, .table th.tinytable_css_xo1ss3fuiptf9jbf7jza { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_i2jayavqw0vmbmjrajbi, .table th.tinytable_css_i2jayavqw0vmbmjrajbi { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_q90c2jmz50ep0eexqyep, .table th.tinytable_css_q90c2jmz50ep0eexqyep { text-align: center; }
+      .table td.tinytable_css_3zr03udyq0cg50qg6nic, .table th.tinytable_css_3zr03udyq0cg50qg6nic { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_i7zk318jztgkkg4x6sp0, .table th.tinytable_css_i7zk318jztgkkg4x6sp0 { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_wp6junb1mwnk2ryadw06, .table th.tinytable_css_wp6junb1mwnk2ryadw06 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_emob096s6f066iua9od4, .table th.tinytable_css_emob096s6f066iua9od4 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_glsu12smd2zoee1e421x, .table th.tinytable_css_glsu12smd2zoee1e421x { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_smo8liyptt5op9o6a9ua, .table th.tinytable_css_smo8liyptt5op9o6a9ua { text-align: left; }
+      .table td.tinytable_css_4lj6jjhomdf3luyhetrr, .table th.tinytable_css_4lj6jjhomdf3luyhetrr { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_22zgooh9idgub6tabyi0, .table th.tinytable_css_22zgooh9idgub6tabyi0 { text-align: left; text-align: center; }
+      .table td.tinytable_css_l7z26mk312b8flp921xw, .table th.tinytable_css_l7z26mk312b8flp921xw { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_0650p3v4bm9p4okjio83" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_trjj2gyk4922s4xw82ui" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-2" data-col="0"> </th>
@@ -2749,6 +2749,87 @@ Reiche, F. (forthcoming). <em><span class="nocase">Introduction to Quantitative 
       }
     });
   });
+</script>
+<script>
+
+
+const sidebar = document.querySelector('#quarto-sidebar, .quarto-sidebar');
+const where = document.querySelector('.quarto-secondary-nav') || document.querySelector('#quarto-header');
+if (!sidebar || !where) return;
+
+
+// Collect top-level chapter links. Fallback to all links if needed.
+let links = Array.from(sidebar.querySelectorAll('.sidebar-menu > .sidebar-item > .sidebar-item-container > a.sidebar-link'));
+if (!links.length) links = Array.from(sidebar.querySelectorAll('.sidebar-link'));
+if (!links.length) return;
+
+
+const bar = document.createElement('div');
+bar.id = 'quarto-tertiary-nav';
+
+
+links.forEach(a => {
+const clone = a.cloneNode(true);
+clone.removeAttribute('data-bs-toggle');
+clone.classList.remove('sidebar-link-toggle');
+bar.appendChild(clone);
+});
+
+
+where.after(bar);
+
+
+// Ensure current page link is visible
+const current = bar.querySelector('a[aria-current="page"], a.active');
+if (current && 'scrollIntoView' in current) {
+current.scrollIntoView({behavior: 'auto', inline: 'center', block: 'nearest'});
+}
+}
+
+
+function setHeights(){
+const primary = document.getElementById('quarto-header');
+const secondary = document.querySelector('.quarto-secondary-nav');
+const rootStyle = document.documentElement.style;
+rootStyle.setProperty('--primary-height', (primary ? primary.offsetHeight : 44) + 'px');
+rootStyle.setProperty('--secondary-height', (secondary ? secondary.offsetHeight : 44) + 'px');
+}
+
+
+// Hide/Show on scroll (Headroom-style, tiny + dependency-free)
+let lastY = window.scrollY;
+let acc = 0;
+const threshold = 24; // px accumulated before toggling, to avoid jitter
+
+
+function onScroll(){
+if (!isMobile()) return;
+const y = window.scrollY;
+const dy = y - lastY;
+acc = (dy > 0) ? Math.min(96, acc + dy) : Math.max(-96, acc + dy);
+if (acc > threshold) {
+document.documentElement.classList.add('nav-hidden');
+} else if (acc < -threshold || y < 2) {
+document.documentElement.classList.remove('nav-hidden');
+}
+lastY = y;
+}
+
+
+function init(){
+if (!isMobile()) return; // desktop unchanged
+buildTertiary();
+setHeights();
+window.addEventListener('resize', setHeights, {passive: true});
+window.addEventListener('scroll', onScroll, {passive: true});
+// Recalc after fonts/images settle
+window.setTimeout(setHeights, 300);
+window.addEventListener('load', setHeights);
+}
+
+
+document.addEventListener('DOMContentLoaded', init);
+})();
 </script>
 <script id="quarto-html-after-body" type="application/javascript">
 window.document.addEventListener("DOMContentLoaded", function (event) {
